--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 indicatif = "0.18"
 rusqlite = { version = "0.32", features = ["bundled"] }
+polars = { version = "0.46", features = ["parquet"] }
