--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ indicatif = "0.18"
 rusqlite = { version = "0.32", features = ["bundled"] }
 polars = { version = "0.46", features = ["parquet"] }
 clap = { version = "4", features = ["derive"] }
+rand_pcg = "0.9.0"
